--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blikající pozadí</title>
+  <style>
+    /* Nastavení pozadí a animace */
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: Arial, sans-serif;
+      color: white;
+      font-size: 3em;
+      animation: blikani 2s infinite; /* Animace blikání */
+    }
+
+    /* Definice animace pro pozadí */
+    @keyframes blikani {
+      0% { background-color: red; }
+      25% { background-color: yellow; }
+      50% { background-color: green; }
+      75% { background-color: blue; }
+      100% { background-color: purple; }
+    }
+
+    /* Styly pro text "AHOJ" */
+    h1 {
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
-    <h1 style="text-align: center; color: white; margin-top: 20%;">Barevné blikající pozadí</h1>
-    
+  <h1>AHOJ</h1>
 </body>
 </html>
