--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 </head>
 <body>
   <h1>AHOJ</h1>
+  <div>
+    <h1>AHOJ</h1>
+    <!-- Přidání obrázku do stránky -->
+    <img src="https://example.com/tvuj-obrazek.jpg" alt="Obrázek" />
+  </div>
   https://images.app.goo.gl/1QT1szw4suXJx6pS6
 </body>
 </html>
