--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   <div>
     <h1>AHOJ</h1>
     <!-- Přidání obrázku do stránky -->
-    <img src="https://example.com/tvuj-obrazek.jpg" alt="Obrázek" />
+    <img src=" https://images.app.goo.gl/1QT1szw4suXJx6pS6" alt="Obrázek" />
   </div>
-  https://images.app.goo.gl/1QT1szw4suXJx6pS6
+
 </body>
 </html>
