--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </ul>
         </section>
 
-        <section id="kontakt" class="section">
+        <section id="723626907" class="4.A">
             <h2>Kontakt</h2>
             <p>Pokud máte jakékoliv dotazy ohledně péče o kočky, neváhejte nás kontaktovat na email: <a href="mailto:info@peco-okockach.cz">info@peco-okockach.cz</a></p>
         </section>
