--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <p>Pokud máte jakékoliv dotazy ohledně péče o kočky, neváhejte nás kontaktovat na email: <a href="mailto:info@peco-okockach.cz">info@peco-okockach.cz</a></p>
         </section>
 
-        <img class="cat-image" src="https://www.example.com/obrazek_kocky.jpg" alt="Kočka">
+        <img class="https://bezednamiska-cdn.oxyshop.cloud/out/pictures/cmsicon/magazin_bengalska_kocka_cmsico.jpg" src="https://www.example.com/obrazek_kocky.jpg" alt="Kočka">
     </div>
 </body>
 </html>
