--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <nav>
         <a href="#uvod">Úvod</a>
-        <a href="#tipy">Tipy na péči</a>
+        <a href="care.html">Tipy na péči</a>
         <a href="#kontakt">Kontakt</a>
     </nav>
 
