--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <nav>
         <a href="#uvod">Úvod</a>
         <a href="care.html">Tipy na péči</a>
-        <a href="#kontakt">Kontakt</a>
+        <a href="kontakt.html">Kontakt</a>
     </nav>
 
     <div class="container">
