--- a/kontakt.html
+++ b/kontakt.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="index.html">Domů</a></li>
             <li><a href="care.html">Péče o kočky</a></li>
-            <li><a href="contact.html">Kontakt</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
     </nav>
 
