--- a/index.html
+++ b/index.html
@@ -83,28 +83,29 @@
         </section>
 
         <section id="tipy" class="section tips">
-            <h2>Tipy na péči o kočky</h2>
+            <h2>Toto je webová stránka o kočkách</h2>
             <ul>
                 <li>
-                    <strong>Výživa:</strong> Kočky potřebují vyváženou stravu, která obsahuje dostatek bílkovin, vitamínů a minerálů. Krmte je kvalitními granulemi nebo konzervami.
+                    <strong>1:</strong> Kočky jsou hravé a rády loví hračky.
                 </li>
                 <li>
-                    <strong>Voda:</strong> Kočky mají tendenci pít málo vody. Ujistěte se, že mají vždy k dispozici čerstvou vodu.
+                    <strong>2:</strong> Mají měkkou srst, kterou si často čistí.
                 </li>
                 <li>
-                    <strong>Hraní:</strong> Kočky potřebují stimulaci. Pořiďte jim hračky, které podpoří jejich přirozené lovecké instinkty.
+                    <strong>3:</strong> Kočky milují spát na teplých místech.
                 </li>
                 <li>
-                    <strong>Údržba srsti:</strong> Pravidelně kartáčujte kočku, aby její srst zůstala zdravá a lesklá. Některé kočky potřebují více péče než jiné.
+                    <strong>4:</strong> Jejich oči září ve tmě, což je fascinující
                 </li>
                 <li>
-                    <strong>Veterinární péče:</strong> Pravidelné návštěvy veterináře jsou důležité pro zdraví kočky, včetně očkování a preventivních prohlídek.
-                </li>
+                    <strong>5:</strong> PKaždá kočka má svou jedinečnou povahu.
+
+
             </ul>
         </section>
 
         <section id="neco o kockach" class="4.A">
-            <h2>723626907</h2>
+            <h2>Máte rádi kočky?</h2>
             <p>Pokud máte jakékoliv dotazy ohledně péče o kočky, neváhejte nás kontaktovat na email: <a href="mailto:info@peco-okockach.cz">info@peco-okockach.cz</a></p>
         </section>
 
