--- a/kontakt.html
+++ b/kontakt.html
@@ -21,7 +21,7 @@
     </nav>
 
     <section>
-        <h2>Kontaktní informace</h2>
+        <h2>Viktorie Kotábová</h2>
         <p>Pokud máte jakékoliv dotazy nebo potřebujete více informací, kontaktujte nás na následujícím emailu:</p>
         <p><a href="mailto:info@peco-okockach.cz">info@peco-okockach.cz</a></p>
     </section>
