--- a/care.html
+++ b/care.html
@@ -23,10 +23,18 @@
     <section>
         <h2>Tipy na péči o kočky</h2>
         <ul>
-            <li><strong>Výživa:</strong> Kočky potřebují kvalitní krmivo s vysokým obsahem bílkovin.</li>
-            <li><strong>Údržba srsti:</strong> Pravidelně kartáčujte kočku, aby její srst zůstala zdravá.</li>
-            <li><strong>Hraní:</strong> Kočky potřebují stimulaci a pohyb, pořiďte jim hračky.</li>
-            <li><strong>Veterinární péče:</strong> Ujistěte se, že kočka pravidelně chodí na preventivní prohlídky.</li>
+            <li><strong>Výživa:</strong> Kočky potřebují kvalitní krmivo s vysokým obsahem bílkovin, protože jsou přirození masožravci.
+                Dobrý zdroj výživy jim pomáhá udržovat silné svaly a zdravou imunitu.
+                Kromě granulí můžete zvážit i vlhké krmivo, které navíc podporuje hydrataci.</li>
+            <li><strong>Údržba srsti:</strong> Pravidelně kartáčujte kočku, aby její srst zůstala zdravá a bez chuchvalců.
+                Kartáčování také pomáhá odstraňovat uvolněné chlupy a snižuje jejich línání po domě.
+                U dlouhosrstých plemen je péče o srst obzvlášť důležitá, aby se předešlo zacuchání.</li>
+            <li><strong>Hraní:</strong> Kočky potřebují stimulaci a pohyb, pořiďte jim hračky, jako jsou míčky nebo šustící myši.
+                Aktivní hraní podporuje jejich fyzickou kondici a předchází nudě či stresu.
+                Zkuste také interaktivní hračky nebo šplhací strom, aby měly více zábavy a prostoru.</li>
+            <li><strong>Veterinární péče:</strong> UUjistěte se, že kočka pravidelně chodí na preventivní prohlídky, aby byla zdravá.
+                Veterinár může včas odhalit problémy, jako jsou zubní kameny nebo paraziti.
+                Pravidelné očkování a odčervení jsou klíčové pro dlouhý a spokojený život kočky.</li>
         </ul>
     </section>
 
