--- a/kontakt.html
+++ b/kontakt.html
@@ -70,11 +70,9 @@
     </header>
 
     <nav>
-        <ul>
-            <li><a href="index.html">Domů</a></li>
-            <li><a href="care.html">Péče o kočky</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
-        </ul>
+        <a href="#uvod">Úvod</a>
+        <a href="care.html">Tipy na péči</a>
+        <a href="kontakt.html">Kontakt</a>
     </nav>
 
     <section>
