--- a/kontakt.html
+++ b/kontakt.html
@@ -70,7 +70,7 @@
     </header>
 
     <nav>
-        <a href="#uvod">Úvod</a>
+        <a href="index.html">Úvod</a>
         <a href="care.html">Tipy na péči</a>
         <a href="kontakt.html">Kontakt</a>
     </nav>
