--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Péče o kočky</title>
     <link rel="stylesheet" href="styles.css">
@@ -109,9 +108,13 @@
             <p>Pokud máte jakékoliv dotazy ohledně péče o kočky, neváhejte nás kontaktovat na email: <a href="mailto:info@peco-okockach.cz">info@peco-okockach.cz</a></p>
         </section>
 
-        <img class="https://bezednamiska-cdn.oxyshop.cloud/out/pictures/cmsicon/magazin_bengalska_kocka_cmsico.jpg"src="https://www.example.com/obrazek_kocky.jpg" alt="Kočka">
+        <img src="https://www.example.com/obrazek_kocky.jpg" alt="Kočka">
     </div>
 </body>
 </html>
-
+!DOCTYPE html>
+<html lang="cs">
+<head>
+    <meta charset="UTF-8">
+  
 
