--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <p>Pokud máte jakékoliv dotazy ohledně péče o kočky, neváhejte nás kontaktovat na email: <a href="mailto:info@peco-okockach.cz">info@peco-okockach.cz</a></p>
         </section>
 
-        <img src="https://www.example.com/obrazek_kocky.jpg" alt="Kočka">
+        <img src="https://www.chlupaci.cz/user/articles/images/kocici-plemeno-kocka-domaci_(11).jpg" alt="Kočka">
     </div>
 </body>
 </html>
