--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                     <strong>3:</strong> Kočky milují spát na teplých místech.
                 </li>
                 <li>
-                    <strong>4:</strong> Jejich oči září ve tmě, což je fascinující
+                    <strong>4:</strong> Jejich oči září ve tmě, což je fascinující.
                 </li>
                 <li>
-                    <strong>5:</strong> PKaždá kočka má svou jedinečnou povahu.
+                    <strong>5:</strong> Každá kočka má svou jedinečnou povahu.
 
 
             </ul>
