--- a/care.html
+++ b/care.html
@@ -87,7 +87,7 @@
             <li><strong>Hraní:</strong> Kočky potřebují stimulaci a pohyb, pořiďte jim hračky, jako jsou míčky nebo šustící myši.
                 Aktivní hraní podporuje jejich fyzickou kondici a předchází nudě či stresu.
                 Zkuste také interaktivní hračky nebo šplhací strom, aby měly více zábavy a prostoru.</li>
-            <li><strong>Veterinární péče:</strong> UUjistěte se, že kočka pravidelně chodí na preventivní prohlídky, aby byla zdravá.
+            <li><strong>Veterinární péče:</strong> Ujistěte se, že kočka pravidelně chodí na preventivní prohlídky, aby byla zdravá.
                 Veterinár může včas odhalit problémy, jako jsou zubní kameny nebo paraziti.
                 Pravidelné očkování a odčervení jsou klíčové pro dlouhý a spokojený život kočky.</li>
         </ul>
