--- a/care.html
+++ b/care.html
@@ -94,6 +94,8 @@
         </ul>
     </section>
 
+    <img src=https://blog.akinu.cz/upload/articles/237_articleBig20230427102834.jpg alt="Kočka">
+
     <footer>
         <p>&copy; 2025 Péče o kočky | Všechna práva vyhrazena</p>
     </footer>
