--- a/kontakt.html
+++ b/kontakt.html
@@ -82,6 +82,8 @@
         <p><a href="mailto:info@peco-okockach.cz">info@peco-okockach.cz</a></p>
     </section>
 
+    <img src="https://www.nechybujte.cz/images/mbx/p-000877.png" alt="Kočka">
+
     <footer>
         <p>&copy; 2025 Péče o kočky | Všechna práva vyhrazena</p>
     </footer>
