--- a/kontakt.html
+++ b/kontakt.html
@@ -6,64 +6,58 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kontakt</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav {
+            background-color: #444;
+            overflow: hidden;
+        }
+        nav a {
+            color: white;
+            padding: 14px 20px;
+            text-decoration: none;
+            float: left;
+            display: block;
+        }
+        nav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+        .container {
+            padding: 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        .image-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh; /* Výška celé obrazovky */
+        }
+        .cat-image {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f4;
-    }
-    header {
-        background-color: #333;
-        color: white;
-        padding: 10px 0;
-        text-align: center;
-    }
-    nav {
-        background-color: #444;
-        overflow: hidden;
-    }
-    nav a {
-        color: white;
-        padding: 14px 20px;
-        text-decoration: none;
-        float: left;
-        display: block;
-    }
-    nav a:hover {
-        background-color: #ddd;
-        color: black;
-    }
-    .container {
-        padding: 20px;
-        max-width: 1200px;
-        margin: 0 auto;
-    }
-    h1, h2 {
-        color: #333;
-    }
-    .section {
-        margin-bottom: 20px;
-    }
-    .tips ul {
-        list-style-type: none;
-        padding: 0;
-    }
-    .tips li {
-        background-color: #fff;
-        margin: 10px 0;
-        padding: 10px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-    }
-    .cat-image {
-        max-width: 100%;
-        height: auto;
-        margin-top: 20px;
-    }
-</style>
 <body>
     <header>
         <h1>Kontakt</h1>
@@ -82,7 +76,10 @@
         <p><a href="mailto:info@peco-okockach.cz">info@peco-okockach.cz</a></p>
     </section>
 
-    <img src="https://www.nechybujte.cz/images/mbx/p-000877.png" alt="Kočka">
+    <!-- Obrázek uprostřed obrazovky -->
+    <div class="image-container">
+        <img class="cat-image" src="https://www.nechybujte.cz/images/mbx/p-000877.png" alt="Kočka">
+    </div>
 
     <footer>
         <p>&copy; 2025 Péče o kočky | Všechna práva vyhrazena</p>
