--- a/care.html
+++ b/care.html
@@ -100,7 +100,7 @@
     <img class="cat-image" src="https://blog.akinu.cz/upload/articles/237_articleBig20230427102834.jpg" alt="Kočka">
 
     <footer>
-        <p>&copy; 2025 Péče o kočky | Všechna práva vyhrazena</p>
+        <p>&copy; 2025 Péče o kočky | pouze pro studijní účely</p>
     </footer>
 </body>
 </html>
