--- a/kontakt.html
+++ b/kontakt.html
@@ -82,7 +82,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Péče o kočky | Všechna práva vyhrazena</p>
+        <p>&copy; 2025 Péče o kočky | pouze pro studijní účely</p>
     </footer>
 </body>
 </html>
