--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Péče o kočky</title>
+    <title>Péče o kočkyy</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
