--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             margin: 0 auto;
         }
         h1, h2 {
-            color: #ffffff;
+            color: #29c4c4;
         }
         .section {
             margin-bottom: 20px;
