--- a/care.html
+++ b/care.html
@@ -41,7 +41,7 @@
             margin: 0 auto;
         }
         h1, h2 {
-            color: #333;
+            color: #1eb9b9;
         }
         .section {
             margin-bottom: 20px;
