--- a/kontakt.html
+++ b/kontakt.html
@@ -41,7 +41,7 @@
             margin: 0 auto;
         }
         h1, h2 {
-            color: #333;
+            color: #2bb6b6;
         }
         .section {
             margin-bottom: 20px;
