--- a/care.html
+++ b/care.html
@@ -19,10 +19,12 @@
             color: white;
             padding: 10px 0;
             text-align: center;
+            margin-bottom: 20px; /* Okraje pod header */
         }
         nav {
             background-color: #444;
             overflow: hidden;
+            margin-bottom: 20px; /* Okraje pod navigací */
         }
         nav a {
             color: white;
@@ -42,6 +44,7 @@
         }
         h1, h2 {
             color: #1eb9b9;
+            margin: 20px 0; /* Okraje nad a pod nadpisy */
         }
         .section {
             margin-bottom: 20px;
@@ -56,6 +59,7 @@
             padding: 10px;
             border: 1px solid #ddd;
             border-radius: 5px;
+            margin-bottom: 20px; /* Okraje pod každým tipem */
         }
         /* Změna: Obrázek zarovnaný na střed */
         .cat-image {
