--- a/kontakt.html
+++ b/kontakt.html
@@ -19,12 +19,16 @@
             color: white;
             padding: 10px 0;
             text-align: center;
-            margin-bottom: 20px;
+            margin: 0; /* Odstranění mezer */
+        }
+        h1 {
+            margin: 0; /* Odstranění mezery mezi nadpisem a navigací */
+            padding: 10px 0;
         }
         nav {
             background-color: #444;
             overflow: hidden;
-            margin-bottom: 20px;
+            margin: 0; /* Odstranění mezery mezi headerem a navigací */
         }
         nav a {
             color: white;
@@ -43,7 +47,7 @@
             margin: 0 auto;
             text-align: center;
         }
-        h1, h2 {
+        h2 {
             color: #2bb6b6;
             text-align: center;
             margin: 20px 0;
